--- a/style.css
+++ b/style.css
@@ -48,8 +48,6 @@ a.external::after{
     gap: 10px;
 	height: fit-content;
 	width: 100%;
-	padding-left: 30px;
-	padding-right: 30px;
 }
 #blinkies{
     display: flex;
@@ -101,4 +99,11 @@ a{
 }
 #socials span{
 	font-size: larger;
+}
+
+@media only screen and (min-width: 768px) {
+    #container{ 
+		padding-left: 30px;
+		padding-right: 30px;
+    }
 }
